redirect to antidepressant-tapering page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<head>
+<title>Tapering antidepressant project</title>
+</head>
+
+<body>
+<script>
+    window.onload = () => {
+      window.location.replace("https://frmh0313.github.io/antidepressant-tapering");
+    }
+</script>
+</body>
