add redirecting message

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 </head>
 
 <body>
+<p>Redirecting to antidepressant project page...</p>
 <script>
     window.onload = () => {
       window.location.replace("https://frmh0313.github.io/antidepressant-tapering");
